Tropical Transport Project Analysis

--- a/terp-project_analysis.html
+++ b/terp-project_analysis.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
 	<title>Project Analysis- Tropical Transport</title>
+	<link rel="stylesheet" href="css/main.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">	
 	<meta charset="UTF-8" />
 </head>
 <!--Header-->
 <body>
+	<div id="wrapper">
 	<h1>Site Intent</h1>
-		<p></p>
+		<p>Tropical Transport has set forth a number of goals to improve orlandotropicaltransport.com. While improving the SEO of the given site, they also are interested in improving the overall hierarchy and navigation of the web site. This will be accomplished by improving the structure of the content given by the client. The call to action will be eye catching to improve the turn around of user interest and "service request" form submission. The Navigation will be simple, easy to follow, and based on an internal market survey of what the target audience is looking for in a transportation website, this will be provided by the client. The SEO will be improved through using up to date keywords for the given demographics in that targeted geographic location. Overall the site will be condensed to six pages, easy navigate, and easy to find. </p>
 	<h1>Competitive Analysis</h1>
-		<p></p>
+		<p>While there is heavy competition in our market, I believe we can take advantage of a few key points that should drive us to the top of the ranks. Our target market is currently under control by mearstransportation.com. This is due to some great usage of keywords on the site, and over 400 links linking into the domain. The good news is that they are incorporating "Orlando" (i.e. "orlando taxi) into each keyword when these are not the keywords with the most traffic. Since the search engines automatically take the users geographical location into effect, this is not necessary and the major keywords for Orlando are in fact "taxi at airport" "cab service" and many other simpler terms. By incorporating these keywords and linking to other sites, I believe we can move to the top of the ranks.</p>
 	<h1>Targeted Audience</h1>
-		<p></p>
+		<p>A major industry and revenue source for Florida is the vacation industry. Whether it's year round with vacations, or spring break there are constantly people arriving and leaving Florida. That makes the airports a hotspot for needed transportation. One major aspect we should be focusing on is the mobile user. Whether it's a responsive website, or mobile only site we should be targeting that demographic. Another target demographic would be the spring breakers during the season. Florida blows up during the spring break session with college kids and year round workers looking to let loose. This is a great time to promote our service request/ reservation form and get everyone using Tropical Transportation. </p>
+	</div>
 </body>
 </html>
